cmake_minimum_required(VERSION 3.23)
project(lab1)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab1 main.cpp MedianofTwoSortedArrays.cpp MedianofTwoSortedArrays.h CountingSort.cpp CountingSort.h IsValidBST.cpp IsValidBST.h Quick_Sort.cpp Quick_Sort.h KnapsackProblem0_1.cpp KnapsackProblem0_1.h Maximum_Subarray.cpp Maximum_Subarray.h)
